Add chat_id as query param
