# forwarder/handlers.py
@@ -6,7 +6,7 @@ from aiolambda import logger
 from forwarder.response import return_200
 
 
-async def forward_alerts(*_null, **extra_args) -> Response:
+async def forward_alerts(chat_id, **extra_args) -> Response:
     return compose(
         logger.debug,
         return_200)(await extra_args['request'].json())
